--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         <div class="sphinxsidebarwrapper">
   <h4>Next topic</h4>
   <p class="topless"><a href="installation.html"
-                        title="next chapter">Installation of <tt class="docutils literal docutils literal"><span class="pre">mutpath</span></tt></a></p>
+                        title="next chapter">Installation of <tt class="docutils literal"><span class="pre">mutpath</span></tt></a></p>
   <h3>This Page</h3>
   <ul class="this-page-menu">
     <li><a href="_sources/index.txt"
