Minor documentation updates

--- a/mutpath_parse_to_beastxml.html
+++ b/mutpath_parse_to_beastxml.html
@@ -140,7 +140,8 @@ These sequences should have headers in the following format:</p>
 and the third entry must give the date of isolation, including at least
 a year and a month and day if available. The dates are important,
 as date stamped sequences are used in BEAST. If a date only includes the
-year, the numerical date assigned is halfway through that year (July 1).</p>
+year, the numerical date assigned is halfway through that year (July 1).
+Note that <strong>stop codons must be removed</strong> from the sequences in <em>seqfile</em> prior to running this script.</p>
 <p><em>startseq</em> should give the name of a FASTA file containing a single sequence
 entry which is the starting sequence for the mutational trajectory. The
 header should have the same format as for <em>seqfile</em>. This is also the reference
