--- a/mutpath_compact_trees.html
+++ b/mutpath_compact_trees.html
@@ -26,6 +26,7 @@
     <script type="text/javascript" src="_static/underscore.js"></script>
     <script type="text/javascript" src="_static/doctools.js"></script>
     <link rel="top" title="mutpath 0.1 documentation" href="index.html" />
+    <link rel="up" title="Scripts" href="scripts.html" />
     <link rel="next" title="mutpath_get_paths.py" href="mutpath_get_paths.html" />
     <link rel="prev" title="mutpath_parse_to_beast_xml.py" href="mutpath_parse_to_beastxml.html" /> 
   </head>
@@ -45,7 +46,8 @@
         <li class="right" >
           <a href="mutpath_parse_to_beastxml.html" title="mutpath_parse_to_beast_xml.py"
              accesskey="P">previous</a> |</li>
-        <li><a href="index.html">mutpath 0.1 documentation</a> &raquo;</li> 
+        <li><a href="index.html">mutpath 0.1 documentation</a> &raquo;</li>
+          <li><a href="scripts.html" accesskey="U">Scripts</a> &raquo;</li> 
       </ul>
     </div>  
 
@@ -148,7 +150,8 @@
         <li class="right" >
           <a href="mutpath_parse_to_beastxml.html" title="mutpath_parse_to_beast_xml.py"
              >previous</a> |</li>
-        <li><a href="index.html">mutpath 0.1 documentation</a> &raquo;</li> 
+        <li><a href="index.html">mutpath 0.1 documentation</a> &raquo;</li>
+          <li><a href="scripts.html" >Scripts</a> &raquo;</li> 
       </ul>
     </div>
     <div class="footer">
