--- a/mutpath_get_paths.html
+++ b/mutpath_get_paths.html
@@ -26,8 +26,9 @@
     <script type="text/javascript" src="_static/underscore.js"></script>
     <script type="text/javascript" src="_static/doctools.js"></script>
     <link rel="top" title="mutpath 0.1 documentation" href="index.html" />
+    <link rel="up" title="Scripts" href="scripts.html" />
     <link rel="next" title="mutpath_annotate_tree.py" href="mutpath_annotate_tree.html" />
-    <link rel="prev" title="mutpath_compact_trees.py script" href="mutpath_compact_trees.html" /> 
+    <link rel="prev" title="mutpath_compact_trees.py" href="mutpath_compact_trees.html" /> 
   </head>
   <body>
     <div class="related">
@@ -43,9 +44,10 @@
           <a href="mutpath_annotate_tree.html" title="mutpath_annotate_tree.py"
              accesskey="N">next</a> |</li>
         <li class="right" >
-          <a href="mutpath_compact_trees.html" title="mutpath_compact_trees.py script"
+          <a href="mutpath_compact_trees.html" title="mutpath_compact_trees.py"
              accesskey="P">previous</a> |</li>
-        <li><a href="index.html">mutpath 0.1 documentation</a> &raquo;</li> 
+        <li><a href="index.html">mutpath 0.1 documentation</a> &raquo;</li>
+          <li><a href="scripts.html" accesskey="U">Scripts</a> &raquo;</li> 
       </ul>
     </div>  
 
@@ -174,7 +176,7 @@ C12A : 9.134</pre>
 
   <h4>Previous topic</h4>
   <p class="topless"><a href="mutpath_compact_trees.html"
-                        title="previous chapter"><tt class="docutils literal docutils literal"><span class="pre">mutpath_compact_trees.py</span></tt> script</a></p>
+                        title="previous chapter">mutpath_compact_trees.py</a></p>
   <h4>Next topic</h4>
   <p class="topless"><a href="mutpath_annotate_tree.html"
                         title="next chapter">mutpath_annotate_tree.py</a></p>
@@ -213,9 +215,10 @@ C12A : 9.134</pre>
           <a href="mutpath_annotate_tree.html" title="mutpath_annotate_tree.py"
              >next</a> |</li>
         <li class="right" >
-          <a href="mutpath_compact_trees.html" title="mutpath_compact_trees.py script"
+          <a href="mutpath_compact_trees.html" title="mutpath_compact_trees.py"
              >previous</a> |</li>
-        <li><a href="index.html">mutpath 0.1 documentation</a> &raquo;</li> 
+        <li><a href="index.html">mutpath 0.1 documentation</a> &raquo;</li>
+          <li><a href="scripts.html" >Scripts</a> &raquo;</li> 
       </ul>
     </div>
     <div class="footer">
