--- a/mutpath_parse_to_beastxml.html
+++ b/mutpath_parse_to_beastxml.html
@@ -26,8 +26,9 @@
     <script type="text/javascript" src="_static/underscore.js"></script>
     <script type="text/javascript" src="_static/doctools.js"></script>
     <link rel="top" title="mutpath 0.1 documentation" href="index.html" />
-    <link rel="next" title="mutpath_compact_trees.py script" href="mutpath_compact_trees.html" />
-    <link rel="prev" title="Typical workflow" href="workflow.html" /> 
+    <link rel="up" title="Scripts" href="scripts.html" />
+    <link rel="next" title="mutpath_compact_trees.py" href="mutpath_compact_trees.html" />
+    <link rel="prev" title="Scripts" href="scripts.html" /> 
   </head>
   <body>
     <div class="related">
@@ -40,12 +41,13 @@
           <a href="py-modindex.html" title="Python Module Index"
              >modules</a> |</li>
         <li class="right" >
-          <a href="mutpath_compact_trees.html" title="mutpath_compact_trees.py script"
+          <a href="mutpath_compact_trees.html" title="mutpath_compact_trees.py"
              accesskey="N">next</a> |</li>
         <li class="right" >
-          <a href="workflow.html" title="Typical workflow"
+          <a href="scripts.html" title="Scripts"
              accesskey="P">previous</a> |</li>
-        <li><a href="index.html">mutpath 0.1 documentation</a> &raquo;</li> 
+        <li><a href="index.html">mutpath 0.1 documentation</a> &raquo;</li>
+          <li><a href="scripts.html" accesskey="U">Scripts</a> &raquo;</li> 
       </ul>
     </div>  
 
@@ -238,11 +240,11 @@ sitemodel JTT</pre>
 </ul>
 
   <h4>Previous topic</h4>
-  <p class="topless"><a href="workflow.html"
-                        title="previous chapter">Typical workflow</a></p>
+  <p class="topless"><a href="scripts.html"
+                        title="previous chapter">Scripts</a></p>
   <h4>Next topic</h4>
   <p class="topless"><a href="mutpath_compact_trees.html"
-                        title="next chapter"><tt class="docutils literal docutils literal docutils literal"><span class="pre">mutpath_compact_trees.py</span></tt> script</a></p>
+                        title="next chapter">mutpath_compact_trees.py</a></p>
   <h3>This Page</h3>
   <ul class="this-page-menu">
     <li><a href="_sources/mutpath_parse_to_beastxml.txt"
@@ -275,12 +277,13 @@ sitemodel JTT</pre>
           <a href="py-modindex.html" title="Python Module Index"
              >modules</a> |</li>
         <li class="right" >
-          <a href="mutpath_compact_trees.html" title="mutpath_compact_trees.py script"
+          <a href="mutpath_compact_trees.html" title="mutpath_compact_trees.py"
              >next</a> |</li>
         <li class="right" >
-          <a href="workflow.html" title="Typical workflow"
+          <a href="scripts.html" title="Scripts"
              >previous</a> |</li>
-        <li><a href="index.html">mutpath 0.1 documentation</a> &raquo;</li> 
+        <li><a href="index.html">mutpath 0.1 documentation</a> &raquo;</li>
+          <li><a href="scripts.html" >Scripts</a> &raquo;</li> 
       </ul>
     </div>
     <div class="footer">
